--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -137,15 +137,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                     <p>新用户 8 折优惠 8 折优惠券代码: <font color="#ff0000"><b>new</b></font> 下单时在验证优惠券处填写 new 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.33元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 <p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="x1m5Kg8R" rel="nofollow noopener"><font color="#ff0000">FCCloud（点击注册）</font></a>】</p>
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://t2.9999911.xyz/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="color:red;">星辰机场</a>】</h3>
-                    <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
-IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
-
-
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://t2.9999911.xyz/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
-
-
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red;">狗狗加速</a>】</h3>
+                    <p>狗狗加速作为第一家上线Hysteria1协议的机场，目前已经全面上线Hysteria2协议；不同于hy1，hy2全面优化了链接速度(0-RTT)，进一步降低延迟；同时使用全新的带宽控制方式；能发挥您带宽的最大潜能！全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red">狗狗加速（点击注册）</a>】<br></p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>
                     <p>&nbsp;</p>
                     <p></p>
                     <h2>订阅链接</h2>
@@ -158,7 +153,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                     <p><strong>sing-box订阅链接</strong></p>
                     <div class="xcblog-singbox-box"></div>
                     <p>&nbsp;</p>
-                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-code="UTg5SIHV" rel="nofollow noopener" style="color:#c00;">农夫山泉</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>    
+                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://web.fxyjs.fun/#/register?code=" data-code="mYHEkaJ1" rel="nofollow noopener" style="color:#c00;">放心云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>    
 
                 </div>
             </div>
@@ -169,16 +164,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-5-free-clash.htm" title="11月5日→22M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">11月5日→22M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-2-free-ssr-node.htm" title="12月2日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">12月2日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-8-free-ssr-node.htm" title="11月8日→18.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月8日→18.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/news/article-37315.htm" title="Vue结合ElementUI上传Base64编码后的图片实例_vue.js">Vue结合ElementUI上传Base64编码后的图片实例_vue.js</a></li>
-                        <li class="py-2"><a href="/news/article-40282.htm" title="动物疫苗一般多少钱打一针啊视频讲解（动物疫苗接种时间表）">动物疫苗一般多少钱打一针啊视频讲解（动物疫苗接种时间表）</a></li>
-                        <li class="py-2"><a href="/news/article-34906.htm" title="河南省动物疫病预防控制中心（河南省动物疫病预防控制中心地址）">河南省动物疫病预防控制中心（河南省动物疫病预防控制中心地址）</a></li>
-                        <li class="py-2"><a href="/news/article-43746.htm" title="南平有宠物医院吗（南平宠物狗南平宠物狗信息）">南平有宠物医院吗（南平宠物狗南平宠物狗信息）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-9-node-share.htm" title="10月9日→18.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">10月9日→18.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-41757.htm" title="义乌领养宠物猫吧最新消息（义乌宠物收容中心在哪）">义乌领养宠物猫吧最新消息（义乌宠物收容中心在哪）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-18-free-clash.htm" title="12月18日→19.6M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐">12月18日→19.6M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-44241.htm" title="附近领养狗狗基地 附近领养狗狗基地在哪里">附近领养狗狗基地 附近领养狗狗基地在哪里</a></li>
+                        <li class="py-2"><a href="/news/article-25484.htm" title="宠物狗狗免费领养网询问（正规免费领养宠物狗）">宠物狗狗免费领养网询问（正规免费领养宠物狗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→18.5M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">12月27日→18.5M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-19514.htm" title="动物疫苗采购问题（2021年动物疫苗采购）">动物疫苗采购问题（2021年动物疫苗采购）</a></li>
+                        <li class="py-2"><a href="/news/article-23172.htm" title="开宠物店的利润和风险有哪些问题（开宠物店的利润和风险有哪些问题呢）">开宠物店的利润和风险有哪些问题（开宠物店的利润和风险有哪些问题呢）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-4-free-ssr-subscribe.htm" title="11月4日→21.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">11月4日→21.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-8-free-ssr-node.htm" title="12月8日→19M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">12月8日→19M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-33487.htm" title="python ui框架_PyQt5GUI项目程序框架">python ui框架_PyQt5GUI项目程序框架</a></li>
+                        <li class="py-2"><a href="/news/article-26878.htm" title="Vue2 中封装组件-消息提示 Message">Vue2 中封装组件-消息提示 Message</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +185,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
